kubernetes/apps/goldilocks/goldilocks/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: goldilocks
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - goldilocks.blackcats.cc
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
